# TaskScheduler

./: .clang-format  .clang-format.yml  .gitignore  CMakeLists.txt  ITaskScheduler.h  IThreadPool.h  README.md  Randomizer.cpp  Randomizer.h  Task.cpp  Task.h  TaskSchedulerImpl.cpp  TaskSchedulerImpl.h  ThreadPool.cpp  ThreadPool.h  main.cpp
.github/workflows/: .github.yml  clang-format-check.yml  cmake-multi-platform.yml
Interface/: ITaskScheduler.h
Tests/: CMakeLists.txt  TaskSchedulerTest.cpp  test_main.cpp
Tests/Mocks/: MockThreadPool.h
